# lab2_s3

./: CMakeLists.txt  Dictionary.h  Histogram.h  Interface.h  Person.h  README.md  Tests.cpp  main.cpp
